Add a temporary file to GitHub

--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,3 @@
 backend_url =https://enddyogbenyi-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1hdnbo4lexqc.us-south.codeengine.appdomain.cloud/analyze/Fantastic%20services/
+#sentiment_analyzer_url=https://sentianalyzer.1hdnbo4lexqc.us-south.codeengine.appdomain.cloud/analyze/Fantastic%20services/
+sentiment_analyzer_url =https://sentianalyzer.1hf6aa4exox5.us-south.codeengine.appdomain.cloud/
