Add temporary file to Github

--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,5 +1,5 @@
 #backend_url =https://enddyogbenyi-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
 #sentiment_analyzer_url=https://sentianalyzer.1hdnbo4lexqc.us-south.codeengine.appdomain.cloud/analyze/Fantastic%20services/
 #sentiment_analyzer_url =https://sentianalyzer.1hf6aa4exox5.us-south.codeengine.appdomain.cloud/
-backend_url =https://enddyogbenyi-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url =https://sentianalyzer.1hh6a2y0ms3e.us-south.codeengine.appdomain.cloud/
+backend_url =https://enddyogbenyi-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+sentiment_analyzer_url =https://sentianalyzer.1hsmo6807hw0.us-south.codeengine.appdomain.cloud/
